[package]
name = "emoji-clock-cli"
version = "0.0.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Emoji clock cli"
documentation = "https://softprops.github.io/emoji-clock"
homepage = "https://github.com/softprops/emoji-clock"
repository = "https://github.com/softprops/emoji-clock"
keywords = ["emoji", "clock"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "emojiclock"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
chrono-english = "0.1"
clipboard = "0.5"
emoji-clock = { version= "0.0.0", path = "../lib" }
structopt = "0.2"